--- a/meta-mylayer/conf/layer.conf
+++ b/meta-mylayer/conf/layer.conf
@@ -2,7 +2,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
     ${LAYERDIR}/recipes-*/*/*.bbappend"
 
 BBFILE_COLLECTIONS += "meta-mylayer"
-BBFILE_PATTERN_meta-mylayer = "^${LAYERDIR}\"
+BBFILE_PATTERN_meta-mylayer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-malayer = "6"
 
 LAYERDEPENDS_meta-mylayer = "core"
