--- a/meta-mylayer/conf/layer.conf
+++ b/meta-mylayer/conf/layer.conf
@@ -1,9 +1,11 @@
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-    ${LAYERDIR}/recipes-*/*/*.bbappend"
+BBFILES += "
+        ${LAYERDIR}/recipes-*/*/*.bb \
+        ${LAYERDIR}/recipes-*/*/*.bbappend
+        "
 
 BBFILE_COLLECTIONS += "meta-mylayer"
 BBFILE_PATTERN_meta-mylayer = "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-malayer = "6"
+BBFILE_PRIORITY_meta-mylayer = "6"
 
 LAYERDEPENDS_meta-mylayer = "core"
 LAYERSERIES_COMPAT_meta-mylayer = "kirkstone"
