--- a/meta-mylayer/conf/layer.conf
+++ b/meta-mylayer/conf/layer.conf
@@ -1,7 +1,7 @@
-BBFILES += "
+BBFILES += "\
         ${LAYERDIR}/recipes-*/*/*.bb \
-        ${LAYERDIR}/recipes-*/*/*.bbappend
-        "
+        ${LAYERDIR}/recipes-*/*/*.bbappend \
+"
 
 BBFILE_COLLECTIONS += "meta-mylayer"
 BBFILE_PATTERN_meta-mylayer = "^${LAYERDIR}/"
